styled scrollbar, added dummy text for projects, fixed some styling inconsistencies

--- a/css/styles.css
+++ b/css/styles.css
@@ -76,7 +76,7 @@ nav a {
 .main, .secondary {
   flex: 1;
   opacity: 0;
-  margin: 0 50px;
+  margin: 20px 50px;
 }
 
 .secondary {
@@ -88,10 +88,6 @@ nav a {
   justify-content: space-around;
 }
 
-.page-title {
-  flex: 1;
-}
-
 .container {
   display: flex;
   flex: 3;
@@ -99,23 +95,28 @@ nav a {
   flex-direction: row;
 }
 
-.projects-container {
+.projects-container, .home-container {
   overflow-y: scroll;
   max-height: 100%;
 }
 
 .about-container {
-  width: 950px;
-  margin: 0 200px;
-  font-size: 24px;
+  align-items: flex-start;
+  display: flex;
+  flex-direction: column;
 }
 
 #kitty {
-  padding: 0px 36%;
-  height: 250px;
+  padding: 0px 44%;
+  height: 200px;
+}
+
+.page-title {
+  flex: 1;
 }
 
 .project {
+  flex: 1;
   display: flex;
   align-self: flex-start;
   flex-direction: column;
@@ -150,9 +151,7 @@ nav a {
 }
 
 .info {
-  display: flex;
-  align-self: flex-end;
-  align-items: center;
+  align-self: center;
 }
 
 form {
@@ -205,7 +204,7 @@ button {
 }
 
 button:hover {
-  background-color: #00ADFF;
+  background-color: #30BDFF;
   transition: all 0.4s ease;
 }
 
@@ -230,4 +229,13 @@ footer p {
 
 .social {
   max-height: 32px;
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background-color: #E85F5C;
 }
